# blitz-login

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  redis.conf
.github/: dependabot.yml
config/: configuration.yaml  development.yaml
data/: dump.rdb
src/: configuration.rs  lib.rs  main.rs  startup.rs  types.rs  utility.rs
src/routes/: add.rs  edit.rs  login.rs  mod.rs  remove.rs
tests/: add.rs  health_check.rs  mod.rs
