[package]
name = "blitz-login"
version = "0.1.0"
authors = [ "Mattia Gasparotto gasmat04@gmail.com" ]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "blitz-login"

[dependencies]
actix-web = "4.10.2"
argon2 = { version = "0.6.0-pre.1", features = ["std"] }
config = "0.15.11"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.78"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
redis = { version = "0.30.0", features = ["json"]}

[dev-dependencies]
reqwest = "0.12.15"
